# PTPPM

./: .gitignore  CMakeLists.txt  LICENSE  PTPPM.sln  README.md
PTPPM/: PTPPM.vcxproj  PTPPM.vcxproj.filters  imgui.ini
PTPPM/include/: client.h  config.h  connection.h  dht.h  gui.h  kbucket.h  logger.h  message.h  node_id.h  peer.h  routing_table.h  server.h  session.h
PTPPM/src/: client.cpp  connection.cpp  dht.cpp  gui.cpp  kbucket.cpp  main.cpp  message.cpp  node_id.cpp  peer.cpp  routing_table.cpp  server.cpp  session.cpp
PTPPM_Core/: PTPPM.vcxproj  PTPPM_Core.vcxproj  PTPPM_Core.vcxproj.filters  PTPPM_Network.vcxproj
PTPPM_Core/include/: config.h  network_manager.h  ui_manager.h
PTPPM_Core/src/: main.cpp  network_manager.cpp  ui_manager.cpp
PTPPM_Network/: PTPPM_Network.vcxproj  PTPPM_Network.vcxproj.filters
PTPPM_Network/include/: dynamic_buffer.h  inetwork_client.h  inetwork_server.h  network_buffer_utils.h  network_client.h  network_server.h
PTPPM_Network/include/boost/: wrap_boost_network.h  wrap_boost_peer.h  wrap_boost_serialization.h  wrap_boost_task.h
PTPPM_Network/src/: dynamic_buffer.cpp  network_buffer_utils.cpp  network_client.cpp  network_server.cpp
PTPPM_Network/src/boost/: wrap_boost_network.cpp  wrap_boost_peer.cpp  wrap_boost_serialization.cpp  wrap_boost_task.cpp
PTPPM_Tests/: PTPPM_Tests.vcxproj  PTPPM_Tests.vcxproj.filters
PTPPM_UI/: PTPPM_UI.vcxproj  PTPPM_UI.vcxproj.filters
PTPPM_UI/include/: iuser_interface.h  user_interface.h
PTPPM_UI/src/: user_interface.cpp
include/: application.h
include/data/: asset.h  database.h  project.h  task.h  user.h  version.h
include/network/: discovery_service.h  message_service.h  peer_manager.h
include/renderer/: renderer.h
include/ui/: ui_manager.h
include/ui/panels/: asset_panel.h  nodes_panel.h  panel.h  version_panel.h
include/utils/: sha256.h
include/version_control/: version_manager.h
src/: application.cpp  main.cpp
src/data/: asset.cpp  database.cpp
src/network/: discovery_service.cpp  message_service.cpp  peer_manager.cpp
src/renderer/: renderer.cpp
src/ui/: ui_manager.cpp
src/ui/panels/: asset_panel.cpp  panels.cpp
src/utils/: sha256.cpp
src/version_control/: version_manager.cpp
